Added site icon png

--- a/index.html
+++ b/index.html
@@ -31,5 +31,15 @@
             </div>
         </div>
     </section>
+    <section class="main-contents">
+        <div class="about-me">
+            <h1>About Me</h1>
+            <p>I began my academic journey in biomedical studies, but my passion for technology was too strong to set aside. After college, I transitioned into ICT training and officially began my tech journey. I started out as a WordPress developer, building and managing websites, and over time my curiosity and drive to grow led me deeper into the world of software development.</p><br>
+            <p>Today, I am enrolled in a Full-Stack Software Engineering program at <span>Moringa School</span>, where I am sharpening my skills to create impactful digital solutions. My goal is to leverage technology not only to achieve personal growth but also to make a meaningful impact on the world around me.</p>
+        </div>
+        <div class="picture">
+            <img src="" alt="">
+        </div>
+    </section>
 </body>
 </html>
