--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class=logo src="logo.png" alt="logo">
+        <img class=logo src="logo.png" alt="Benard Oloo Portfolio Logo">
         <div class="nav-action">
             <nav class="nav-links">
                 <ul>
@@ -21,7 +21,7 @@
             <a class="cta" href="#"><button>Call Now</button></a>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero" id="home">
         <div class="hero-content">
             <h1>Hi, I’m <span>Benard Oloo</span>, Software Engineer</h1>
             <p>From WordPress websites to coding at Moringa, I’m mastering full-stack development to craft applications from scratch with impact.</p>
@@ -31,14 +31,14 @@
             </div>
         </div>
     </section>
-    <section class="main-contents">
+    <section class="main-contents" id="about">
+        <div class="ben">
+            <img src="ben.png" alt="Portrait of Benard Oloo Ochieng">
+        </div>
         <div class="about-me">
             <h1>About Me</h1>
-            <p>I began my academic journey in biomedical studies, but my passion for technology was too strong to set aside. After college, I transitioned into ICT training and officially began my tech journey. I started out as a WordPress developer, building and managing websites, and over time my curiosity and drive to grow led me deeper into the world of software development.</p><br>
+            <p>I began my academic journey in biomedical studies, but my passion for technology was too strong to set aside. After college, I transitioned into ICT training and officially began my tech journey. I started out as a WordPress developer, building and managing websites, and over time my curiosity and drive to grow led me deeper into the world of software development.</p>
             <p>Today, I am enrolled in a Full-Stack Software Engineering program at <span>Moringa School</span>, where I am sharpening my skills to create impactful digital solutions. My goal is to leverage technology not only to achieve personal growth but also to make a meaningful impact on the world around me.</p>
-        </div>
-        <div class="picture">
-            <img src="" alt="">
         </div>
     </section>
 </body>
