--- a/index.html
+++ b/index.html
@@ -37,9 +37,45 @@
         </div>
         <div class="about-me">
             <h1>About Me</h1>
-            <p>I began my academic journey in biomedical studies, but my passion for technology was too strong to set aside. After college, I transitioned into ICT training and officially began my tech journey. I started out as a WordPress developer, building and managing websites, and over time my curiosity and drive to grow led me deeper into the world of software development.</p>
-            <p>Today, I am enrolled in a Full-Stack Software Engineering program at <span>Moringa School</span>, where I am sharpening my skills to create impactful digital solutions. My goal is to leverage technology not only to achieve personal growth but also to make a meaningful impact on the world around me.</p>
+            <p>  My journey into the world of technology has been anything but traditional. I originally pursued a degree in biomedical studies because of my deep curiosity about science, health, and the human body. However, even during my academic years, I always found myself drawn to computers, problem-solving, and exploring how digital tools could be applied to improve everyday life. That passion for technology never faded, and it eventually guided me to make a bold transition from the biomedical field into information and communication technology (ICT).
+                </p>
+                <p>
+                After college, I began training in ICT to formally ground myself in the technical skills I had been informally exploring for years. I quickly discovered that technology was not just a hobby for me—it was a calling. My first steps into the tech industry were as a WordPress developer, where I built and customized websites for individuals and small businesses. These early experiences were invaluable, giving me both a sense of confidence and the practical know-how to translate creative ideas into functional digital solutions. Working with clients taught me the importance of clear communication, attention to detail, and designing with the end user in mind.
+                </p>
+                <p>
+                As my skills grew, so did my ambition. I realized that while WordPress gave me a strong foundation in web development, I wanted to deepen my understanding of programming and software engineering. This led me to enroll in the Full-Stack Software Engineering program at <span>Moringa School</span>. At Moringa, I am expanding my expertise in modern web technologies, programming languages, and frameworks that enable me to build scalable, robust applications from the ground up. The program has been both challenging and rewarding, sharpening not only my technical skills but also my problem-solving, teamwork, and project management abilities.
+                </p>
         </div>
     </section>
+            <section class="projects" id="projects">
+                <h1>Featured Projects</h1>
+        <!-- Project 1 -->
+                <div class="project-card">
+                        <img src="jielevate.jpeg" alt="Screenshot of Jielevate website">
+                        <h2>Jielevate</h2>
+                        <p>An empowering hub offering leadership training, personal development, and business coaching. JiElevate helps people grow their influence, finances, and entrepreneurial skills through programs like ManTalk, GROW, and TechSpace.</p>
+                        <a href="https://jielevate.com" target="_blank">Visit Site</a>
+                </div>
+
+        <!-- Project 2 -->
+                <div class="project-card">
+                        <img src="Sjl.jpeg" alt="Screenshot of Social Justice League Kenya website">
+                        <h2>Social Justice League Kenya</h2>
+                        <p>A women-led nonprofit in Homa Bay County promoting gender democracy and equality. Their work includes civic education, legal aid, advocacy, and the Young Women in Politics 50:50 campaign.</p>
+                        <a href="https://socialjusticeleagueke.org" target="_blank">Visit Site</a>
+                </div>
+        <!-- Project 3 -->
+                <div class="project-card">
+                    <img src="swiftclift.jpeg" alt="Screenshot of Swift Clifts Afrique website">
+                    <h2>Swift Clifts Afrique</h2>
+                    <p>A consultancy offering due diligence and advisory services for the mineral industry. They promote transparency and trust in transactions while helping clients make informed decisions.</p>
+                    <a href="https://www.swiftcliftsafrique.com" target="_blank">Visit Site</a>
+             </div>
+
+        <!-- View More Button -->
+                <div class="view-more">
+                     <a href="projects.html" class="btn primary">View More Projects</a>
+                 </div>
+        </section>
 </body>
 </html>
