added phone number to the nav button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
              </nav>
-            <a class="cta" href="#"><button>Call Now</button></a>
+            <a class="cta" href="#"><button>+254722839617</button></a>
         </div>
     </header>
     <section class="hero" id="home">
