Organized the project container

--- a/index.html
+++ b/index.html
@@ -49,36 +49,41 @@
                 </p>
         </div>
     </section>
-            <section class="projects" id="projects">
-                <h1>Featured Projects</h1>
-        <!-- Project 1 -->
-                <div class="project-card">
-                        <img src="jielevate.jpeg" alt="Screenshot of Jielevate website">
-                        <h2>Jielevate</h2>
-                        <p>An empowering hub offering leadership training, personal development, and business coaching. JiElevate helps people grow their influence, finances, and entrepreneurial skills through programs like ManTalk, GROW, and TechSpace.</p>
-                        <a href="https://jielevate.com" target="_blank">Visit Site</a>
-                </div>
+            <!-- project section -->
+    <section class="projects" id="projects">
+        <h1>Featured Projects</h1>
 
-        <!-- Project 2 -->
-                <div class="project-card">
-                        <img src="Sjl.jpeg" alt="Screenshot of Social Justice League Kenya website">
-                        <h2>Social Justice League Kenya</h2>
-                        <p>A women-led nonprofit in Homa Bay County promoting gender democracy and equality. Their work includes civic education, legal aid, advocacy, and the Young Women in Politics 50:50 campaign.</p>
-                        <a href="https://socialjusticeleagueke.org" target="_blank">Visit Site</a>
-                </div>
-        <!-- Project 3 -->
-                <div class="project-card">
-                    <img src="swiftclift.jpeg" alt="Screenshot of Swift Clifts Afrique website">
-                    <h2>Swift Clifts Afrique</h2>
-                    <p>A consultancy offering due diligence and advisory services for the mineral industry. They promote transparency and trust in transactions while helping clients make informed decisions.</p>
-                    <a href="https://www.swiftcliftsafrique.com" target="_blank">Visit Site</a>
-             </div>
+        <div class="project-container">
+            <!-- Project 1 -->
+            <div class="project-card">
+            <img src="jielevate.jpeg" alt="Screenshot of Jielevate website">
+            <h2>Jielevate</h2>
+            <p>An empowering hub offering leadership training, personal development, and business coaching. JiElevate helps people grow their influence, finances, and entrepreneurial skills through programs like ManTalk, GROW, and TechSpace.</p>
+            <a href="https://jielevate.com" target="_blank">Visit Site</a>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card">
+                <img src="Sjl.jpeg" alt="Screenshot of Social Justice League Kenya website">
+                <h2>Social Justice League Kenya</h2>
+                <p>A women-led nonprofit in Homa Bay County promoting gender democracy and equality. Their work includes civic education, legal aid, advocacy, and the Young Women in Politics 50:50 campaign.</p>
+                <a href="https://socialjusticeleagueke.org" target="_blank">Visit Site</a>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project-card">
+                <img src="swiftclift.jpeg" alt="Screenshot of Swift Clifts Afrique website">
+                <h2>Swift Clifts Afrique</h2>
+                <p>A consultancy offering due diligence and advisory services for the mineral industry. They promote transparency and trust in transactions while helping clients make informed decisions.</p>
+                <a href="https://www.swiftcliftsafrique.com" target="_blank">Visit Site</a>
+            </div>
+        </div>
 
         <!-- View More Button -->
-                <div class="view-more">
-                     <a href="projects.html" class="btn primary">View More Projects</a>
-                 </div>
-        </section>
+        <div class="view-more">
+            <a href="projects.html" class="btn primary">View More Projects</a>
+        </div>
+</section>
         <footer>
     <div class="footerContainer">
         <div class="socialIcons">
