Made the header sticky

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio of Benard Oloo | Software Engineer</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -84,50 +84,73 @@
             <a href="projects.html" class="btn primary">View More Projects</a>
         </div>
 </section>
-         <div class="container">
-      <span class="big-circle"></span>
-      <img src="img/shape.png" class="square" alt="" />
-      <div class="form">
-        <div class="contact-info">
-          <h3 class="title">Let's get in touch</h3>
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-            dolorum adipisci recusandae praesentium dicta!
-          </p>
+<!-- Contact section -->
+   <!-- Contact section -->
+<section class="contact" id="contact">
+  <div class="container">
+    <!-- Left Side: Contact Info -->
+    <div class="contact-info">
+      <h3 class="title">Let's get in touch</h3>
+      <p class="text">
+        Let’s connect! Reach out today for collaborations, projects, or inquiries—I’m always happy to chat.
+      </p>
 
-          <div class="info">
+      <div class="info">
             <div class="information">
-              <img src="img/location.png" class="icon" alt="" />
-              <p>Nairobi-Kenya</p>
+                <i class="fas fa-map-marker-alt icon"></i>
+                <p>Nairobi, Kenya</p>
             </div>
             <div class="information">
-              <img src="img/email.png" class="icon" alt="" />
-              <p>ben@opendesk.co.ke</p>
+                <i class="fas fa-envelope icon"></i>
+                <p>ben@opendesk.co.ke</p>
             </div>
             <div class="information">
-              <img src="img/phone.png" class="icon" alt="" />
-              <p>+254722839617</p>
+                <i class="fas fa-phone icon"></i>
+                <p>+254722839617</p>
             </div>
-          </div>
+            </div>
 
-          <div class="social-media">
-            <p>Connect with me :</p>
-            <div class="social-icons">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </div>
-          </div>
+      <div class="social-media">
+        <p>Connect with me :</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
+      </div>
+    </div>
+
+    <!-- Right Side: Contact Form -->
+    <div class="contact-form">
+      <span class="circle one"></span>
+      <span class="circle two"></span>
+
+      <form action="index.html" autocomplete="off">
+        <h3 class="title">Contact Me</h3>
+
+        <div class="input-container">
+          <input type="text" name="name" class="input" placeholder="Your Name" required />
+        </div>
+
+        <div class="input-container">
+          <input type="email" name="email" class="input" placeholder="Your Email" required />
+        </div>
+
+        <div class="input-container">
+          <input type="tel" name="phone" class="input" placeholder="Your Phone" />
+        </div>
+
+        <div class="input-container textarea">
+          <textarea name="message" class="input" placeholder="Your Message"></textarea>
+        </div>
+
+        <input type="submit" value="Send" class="btn" />
+      </form>
+    </div>
+  </div>
+</section>
+<!-- Footer Section -->
 
         <footer>
     <div class="footerContainer">
