--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- View More Button -->
         <div class="view-more">
-            <a href="projects.html" class="btn primary">View More Projects</a>
+            <a href="#" class="btn primary">View More Projects</a>
         </div>
 </section>
 <!-- Contact section -->
@@ -130,7 +130,7 @@
         <h3 class="title">Contact Me</h3>
 
         <div class="input-container">
-          <input type="text" name="name" class="input" placeholder="Your Name" required />
+          <input type="text" name="name" class="input" autocomplete="off" placeholder="Your Name" />
         </div>
 
         <div class="input-container">
