--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="testimonial-card">
                 <img src="client1.jpg" alt="Client from Jielevate">
                 <p>"Benard delivered an exceptional website that perfectly captures our mission. His attention to detail and technical expertise made the entire process smooth and efficient."</p>
-                <h3>John Doe</h3>
+                <h3>Zeph Onditi</h3>
                 <span>Jielevate</span>
             </div>
 
@@ -137,7 +137,7 @@
             <div class="testimonial-card">
                 <img src="client2.jpg" alt="Client from Social Justice League">
                 <p>"Working with Benard was a pleasure. He understood our vision and created a website that effectively communicates our message and engages our audience."</p>
-                <h3>Jane Smith</h3>
+                <h3>Jack Ondusso</h3>
                 <span>Social Justice League Kenya</span>
             </div>
 
@@ -145,7 +145,7 @@
             <div class="testimonial-card">
                 <img src="client3.jpg" alt="Client from Swift Clifts">
                 <p>"Benard's technical skills and creative approach resulted in a professional website that has significantly improved our online presence. Highly recommended!"</p>
-                <h3>Robert Johnson</h3>
+                <h3>Alloyce</h3>
                 <span>Swift Clifts Afrique</span>
             </div>
 
